changed styles for start0page

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 
             #project-pages-menu li a {
                 display: inline-block;
-                border: 1px solid #fccd10;
+                border: 1px solid tomato;
                 padding: 10px 20px;
                 text-decoration: none;
-                color: #fccd10;
+                color: black;
                 transition: all .25s;
             }
             #project-pages-menu li a:hover {
                 text-decoration: none;
-                color: black;
-                background-color: #fccd10;
+                color: white;
+                background-color: black;
             }
 
             #project-name {
